# SGD_Project

./: Ball.cpp  Ball.h  BallBounceFromPaddle.md  Brick.cpp  Brick.h  CMakeLists.txt  Collisions.cpp  Collisions.h  GameObject.cpp  GameObject.h  Makefile  MovingObject.cpp  MovingObject.h  Player.cpp  Player.h  README.md  TestClass.cpp  TestClass.h  Window.cpp  Window.h  macros.h  main.cpp
